# rememora

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.agents/plans/: 76-otel-export.md  82-recursion-gate-observability.md  91-desktop-viewer-v0.md
.claude-plugin/: marketplace.json
.claude/agents/: rememora-developer.md  rememora-triage.md
.claude/plans/: 5-hierarchical-score-propagation.md  6-memory-evolution.md  65-monitors-curator.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  lib.rs  main.rs
bench/: package.json  pnpm-lock.yaml  tsconfig.json
bench/conditions/: ab-control.json  ab-treatment.json  behavioral-triggers.json  full-hybrid-tmux.json  full-hybrid.json  hooks-only.json  none-tmux.json  none.json  reference-card.json
bench/instructions/: behavioral-triggers.txt  full-hybrid.txt  hooks-only.txt  reference-card.txt
bench/results/: REPORT-instruction-mode-eval-run1.md  REPORT-instruction-mode-eval-run2.md  claude-code_2026-03-31T14-05-49-978Z.jsonl  claude-code_2026-03-31T14-09-29-469Z.jsonl  claude-code_2026-04-01T12-26-43-326Z.jsonl  (+28 more)
bench/src/: run.ts  (+11 more)
desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  main.rs
docker/: Dockerfile  README.md  entrypoint.sh
docs/: CNAME  docs.html  index.html  insights.md  release.md
plugin/: README.md
prompts/: consolidate.md  curator.md  signal-gate.md
scripts/: version.py
src/: crypto.rs  curator.rs  db.rs  evolve.rs  format.rs  hierarchy.rs  hotness.rs  jsonl.rs  jsonl_codex.rs  lib.rs  main.rs  propagate.rs  search.rs  stream.rs  timeline.rs  update_check.rs  uri.rs
tests/: SCENARIOS.md  behavior_hotness.rs  behavior_propagation.rs  behavior_search.rs  behavior_timeline.rs  test_concurrent.rs  test_context.rs  test_db.rs  test_encrypt.rs  test_evolve.rs  test_hierarchy.rs  test_hook_invocations.rs  test_jsonl_real.rs  test_project.rs  test_search.rs  test_session.rs  test_setup.rs  test_transfer.rs  test_uri.rs  test_vector_search.rs
(+100 files in other folders)
