[package]
name = "rememora-app"
version = "0.1.0"
edition = "2021"
description = "Rememora desktop viewer (read-only, macOS)"

[lib]
name = "rememora_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Match the root crate exactly so SQLCipher ciphers are interoperable.
rusqlite = { version = "0.34", features = ["bundled-sqlcipher"] }
rememora = { path = "../.." }

[build-dependencies]
tauri-build = { version = "2", features = [] }
