[package]
name = "rememora-desktop"
version = "0.1.0"
edition = "2021"
description = "Rememora Desktop - visual memory explorer"

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.34", features = ["bundled-sqlcipher"] }

# Reference the rememora library crate via path
rememora = { path = "../.." }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
